--- a/finalProject/gameZoneHome.html
+++ b/finalProject/gameZoneHome.html
@@ -13,11 +13,11 @@
 		<section>
 			<h2>Game Selection</h2>
 			<hr>
-			<a href="gameZoneHNF.html"><img src = "media/HideNFind.png" height = 30px width = 35px>Hide n' Find</a>
+			<a href="bluePrints/gameZoneBF.html"><img src = "media/BluePrints.png" height = 30px width = 35px>Blue Prints</a>
 			<hr>
 			<a href="gameZoneNPB.html"><img src = "media/NeonPaddleBall.png" height = 30px width = 35px>Neon Paddle Ball</a>
 			<hr>
-			<a href="gameZoneVB.html"><img src = "media/VirusBuster.png" height = 30px width = 35px>Virus Buster</a>
+			<a href="virusBuster/gameZoneVB.html"><img src = "media/VirusBuster.png" height = 30px width = 35px>Virus Buster</a>
 			<hr>
 		</section>
 		<small><a href="readme.txt">Copyright Info</a></small>
